--- a/block/_intro.scss
+++ b/block/_intro.scss
@@ -6,7 +6,7 @@ body {
 .intro__works {
   background: url("../Img/coffe.png");
   background-size: cover;
-  background-position:  center;.
+  background-position:  center;
   margin-top: 70px;
   padding: 30px 40px;
   margin-bottom: 70px;
